# catquote-data-super

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
.github/workflows/: build.yml
catquote-data/: CMakeLists.txt
catquote-data-examples/: CMakeLists.txt
catquote-data-examples/example/: main.cc
catquote-data/include/catquote_data/core/: quote.h  quote_parser.h  quote_vector.h  quote_writer.h
catquote-data/include/catquote_data/json/: quote_json_array_parser.h  quote_json_parser.h  quote_json_writer.h
catquote-data/include/catquote_data/math/: quote_random_number_generator.h
catquote-data/include/catquote_data/math/util/: quote_positional_notation_converter.h
catquote-data/include/catquote_data/uuid/: quote_uuid.h  quote_uuid_generator.h
catquote-data/include/catquote_data/uuid/v4/: quote_uuid_v4_generator.h
catquote-data/src/core/: quote.cc  quote_parser.cc  quote_vector.cc  quote_writer.cc
catquote-data/src/json/: quote_json_array_parser.cc  quote_json_parser.cc  quote_json_writer.cc
catquote-data/src/math/: quote_random_number_generator.cc
catquote-data/src/math/util/: quote_positional_notation_converter.cc
catquote-data/src/uuid/: quote_uuid.cc  quote_uuid_generator.cc
catquote-data/src/uuid/v4/: quote_uuid_v4_generator.cc
